# whatschat

./: README.md
cpp-engine/: CMakeLists.txt  chat_history.cpp  chat_history.h  claude_api.cpp  claude_api.h  config.cpp  config.h  config.json  contact_filter.cpp  contact_filter.h  http_server.cpp  http_server.h  main.cpp
node-bridge/: bridge.js  package.json
